--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
             <version>4.1.6.Final</version>
 <!--            <version>4.1.25.Final</version>-->
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.43</version>
+        </dependency>
     </dependencies>
 
 </project>
