实现消息交换

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.3.25</version>
+        </dependency>
     </dependencies>
 
 </project>
